ci: add CI, CodeQL, dependency review, Claude code review workflows; improve Docker workflow
- CI: lint + prisma generate + build on Node 22
- CodeQL: weekly security analysis for JS/TS
- Dependency review: flag vulnerable deps in PRs
- Claude code review: AI-powered PR review via anthropics/claude-code-action
- Docker: add workflow_dispatch + concurrency group
- README: add CI/CodeQL/Docker status badges
- All workflows use least-privilege permissions and concurrency groups

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -4,6 +4,11 @@ on:
   push:
     tags:
       - 'v*'
+  workflow_dispatch:
+
+concurrency:
+  group: docker-${{ github.ref }}
+  cancel-in-progress: true
 
 env:
   REGISTRY: ghcr.io
