--- a/.env.example
+++ b/.env.example
@@ -47,5 +47,11 @@ MERCURE_CORS_ORIGINS=https://cloud.heysummon.ai
 # DB_PASSWORD=       # PostgreSQL password (default: heysummon_dev)
 # APP_PORT=3000      # Host port for the platform
 
+# ─── Content Safety Guard ───────────────────────────────
+# Leave GUARD_URL empty to disable guard (backward compatible)
+GUARD_URL=http://heysummon-guard:3457
+# Generate with: openssl rand -hex 32
+GUARD_HMAC_SECRET=
+
 # Edition: "community" (default, self-hosted) or "cloud" (managed, requires cloud license)
 HEYSUMMON_EDITION=community
