--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -21,6 +21,7 @@ jobs:
       AUTH_SECRET: playwright-test-secret
       NEXTAUTH_SECRET: playwright-test-secret
       NEXTAUTH_URL: http://localhost:3456
+      AUTH_TRUST_HOST: "true"
 
     steps:
       - uses: actions/checkout@v4
