feat: ZAP improvements + malicious content guard check
- proxy.ts: add Cache-Control: no-store to all /api/* responses (fixes ZAP Storable alert)
- api/v1/[...catchall]/route.ts: JSON 404 for unknown /api/v1/* paths (fixes Content-Type alert)
- zap-security.yml: rate limit bypass secret for ZAP scanner (fixes 429 in scan)
- e2e/zap-malicious-check.sh: CI FAILS if Guard lets CC/SSN/BSN/XSS/SQLi through
  Tests: /api/v1/help via Guard (CC, SSN, BSN, XSS), SQL injection, oversized payload,
         /api/v1/message unauthenticated, empty API key

--- a/.github/workflows/zap-security.yml
+++ b/.github/workflows/zap-security.yml
@@ -119,6 +119,7 @@ jobs:
           PORT: ${{ env.APP_PORT }}
           REQUIRE_GUARD: "false"
           GUARD_PUBLIC_KEY: ${{ steps.guard-keys.outputs.public_key }}
+          E2E_RATE_LIMIT_BYPASS_SECRET: zap-bypass-secret-do-not-use-in-prod
 
       - name: Start guard
         run: |
@@ -146,6 +147,16 @@ jobs:
 
           echo "✅ OpenAPI spec generated:"
           jq '.paths | keys[]' ${{ github.workspace }}/heysummon-openapi.json
+
+      # ── Malicious content check (fails CI if Guard lets bad payloads through) ──
+      - name: Run malicious content check
+        run: |
+          SEED='${{ steps.seed.outputs.seed_json }}'
+          export E2E_CLIENT_KEY=$(echo "$SEED" | jq -r .clientKey)
+          export E2E_PROVIDER_KEY=$(echo "$SEED" | jq -r .providerKey)
+          export E2E_BASE_URL=http://localhost:${{ env.APP_PORT }}
+          export GUARD_URL=http://localhost:${{ env.GUARD_PORT }}
+          bash e2e/zap-malicious-check.sh
 
       # ── OWASP ZAP API Scan ────────────────────────────────────────────────
       - name: Run OWASP ZAP API Scan
